# GJGE

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  Settings.cmake
definitions/: CMakeLists.txt  dummy.cpp  global_defines.hpp
demo/: CMakeLists.txt
demo/inc/: generators.hpp  templates.hpp  typedefs.hpp
demo/inc/components/: flags.hpp
demo/src/: main.cpp  scenes.cpp  templates.cpp
engine/: CMakeLists.txt
engine/inc/: entity_management.hpp  entity_managment.hpp  error.hpp  inspector.hpp  keyinput.hpp  raylib_operators.hpp  rl.hpp  scene.hpp  template.hpp
engine/inc/assets/: animation.hpp  asset_manager.hpp  assets_loader.hpp  texture.hpp
engine/inc/components/: collision2D.hpp  relations.hpp  sprite.hpp  transform2D.hpp
engine/inc/gui/: console.hpp  console_commands.hpp  inspector.hpp  inspector_comp.hpp  logs.hpp  toolbox.hpp
engine/src/: entity_management.cpp  keyinput.cpp  scene.cpp  template.cpp
engine/src/assets/: animation.cpp  asset_manager.cpp  assets_loader.cpp
engine/src/components/: collision2D.cpp  relations.cpp  sprite.cpp  transform2D.cpp
game/: CMakeLists.txt
game/inc/: templates.hpp  typdefs.hpp  typedefs.hpp
game/inc/componenets/: flags.hpp
game/src/: main.cpp  templates.cpp
