cmake_minimum_required(VERSION 3.24)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
project(GJGE VERSION 0.1 LANGUAGES CXX)
include(Settings.cmake)
message("CURRENT_PROJECT: ${CMAKE_PROJECT_NAME}")
message("CMAKE BUILD TYPE: ${CMAKE_BUILD_TYPE}")
if (CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
    set(CMAKE_CXX_STANDARD 26)
    set(CMAKE_CXX_STANDARD_REQUIRED ON)
    set(CMAKE_CXX_EXTENSIONS ON)
    set(CMAKE_POSITION_INDEPENDENT_CODE ON)
    set_property(GLOBAL PROPERTY USE_FOLDERS ON)


    if (CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
        set(COMPILE_FLAGS -Wall -Wextra -Wpedantic -Wconversion)
    endif ()

    if (CMAKE_BUILD_TYPE MATCHES Debug)
        add_compile_definitions(_DEBUG)
    endif ()

    if (MSVC)
        add_compile_options(/W4)
        add_compile_options(/permissive-)
    endif ()
    option(ENABLE_SANITIZERS "Enable address/UB sanitizers." OFF)
    if (ENABLE_SANITIZERS)
        if (CMAKE_CXX_COMPILER_ID MATCHES "Clang|GNU")
            message("- SANITIZERS ENABLED")
            add_compile_options(-fsanitize=address,undefined -fno-omit-frame-pointer)
            add_link_options(-fsanitize=address,undefined)
        else ()
            message(WARNING "ENABLE_SANITIZERS is set but sanitizers are not supported for this compiler.")
        endif ()
    endif ()
endif ()
add_subdirectory(external)
add_subdirectory(engine)
add_subdirectory(demo)
message("GJGE CONFIGURATION:")
if (GJGE_DEV_TOOLS)
    target_compile_definitions(GJGE PUBLIC GJGE_DEV_TOOLS)
    message("- DEV TOOLS: ENABLED")
else ()
    message("- DEV TOOLS: DISABLED")
endif ()
if (GJGE_DEV_CONSOLE)
    target_compile_definitions(GJGE PUBLIC GJGE_DEV_CONSOLE)
    message("- DEV CONSOLE: ENABLED")
else ()
    message("- DEV CONSOLE: DISABLED")
endif ()
if (GJGE_FEATURE_NETWORKING)
    target_compile_definitions(GJGE PUBLIC GJGE_FEATURE_NETWORKING)
    message("- NETWORKING: ENABLED")
else ()
    message("- NETWORKING: DISABLED")
endif ()
